@@ -1,4 +1,6 @@
-# define IMGUI_DEFINE_MATH_OPERATORS
+# ifndef IMGUI_DEFINE_MATH_OPERATORS
+#     define IMGUI_DEFINE_MATH_OPERATORS
+# endif
 # include "imgui_canvas.h"
 # include <type_traits>
 
