@@ -15,10 +15,10 @@
 
 
 //------------------------------------------------------------------------------
-# include <imgui.h>
 # ifndef IMGUI_DEFINE_MATH_OPERATORS
 #     define IMGUI_DEFINE_MATH_OPERATORS
 # endif
+# include <imgui.h>
 # include <imgui_internal.h>
 
 
