@@ -2,6 +2,8 @@ v0.9.2 (WIP):
 
     NEW: Editor: Add offset of hover/select to style (thanks @MultiPain)
 
+    CHANGE: Editor: Define IMGUI_DEFINE_MATH_OPERATORS before <imgui.h> (#209), thanks @ocornut
+
     BUGFIX: Editor: Correctly initialize 'width' for view resize code (thx @gnif)
 
     BUGFIX: Examples: Handle node deletion before links (#182)
